<resources>
    <string name="app_name">Group Evaluation System</string>
    <string name="faculty">Faculty</string>
    <string name="student">STUDENT</string>
    <string name="student_login">Student Login</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="don_t_have_account">Don\'t have account</string>
    <string name="signup">SignUp</string>

</resources>
