<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical"
    tools:context=".StudentLogin">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:padding="50dp"
        android:text="@string/student_login"
        android:textColor="#303F9F"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/studentUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/studentPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:targetApi="o" />

    <Button
        android:id="@+id/studentLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:background="#303F9F"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/don_t_have_account"
        android:textStyle="bold" />

    <Button
        android:id="@+id/studentSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:background="#303F9F"
        android:text="@string/signup"
        android:textColor="#ffffff"
        android:textStyle="bold" />
</LinearLayout>